// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStat is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat euiStat--leftAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props accent is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title euiStat__title--accent"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props center is rendered 1`] = `
<div
  class="euiStat euiStat--centerAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props danger is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title euiStat__title--danger"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props default is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props l is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props left is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props loading is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat euiStat--leftAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title euiStat__title-isLoading"
  />
  <p
    aria-label="Statistic is loading"
  >
    --
  </p>
  <p />
</div>
`;

exports[`EuiStat props m is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--medium euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props primary is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title euiStat__title--primary"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props right is rendered 1`] = `
<div
  class="euiStat euiStat--rightAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props s is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--small euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props secondary is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title euiStat__title--secondary"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props subdued is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title euiStat__title--subdued"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props title and description are reversed 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--large euiStat__title"
  >
    title
  </p>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
</div>
`;

exports[`EuiStat props xs is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--xsmall euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props xxs is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--xxsmall euiStat__title"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props xxxs is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      id="generated-id"
    >
      description
    </p>
  </div>
  <p
    aria-labelledby="generated-id"
    class="euiTitle euiTitle--xxxsmall euiStat__title"
  >
    title
  </p>
</div>
`;
